
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int _TCHAR ;


 int LoadLibrary (char*) ;
 scalar_t__ SystemCall32 (int,int,int ,int) ;

int _tmain(int argc, _TCHAR* argv[])
{

int st = 0;
int syscall_ID = 0x1160;

LoadLibrary(L"user32.dll");

st = (int)SystemCall32(syscall_ID, 4, 0, 8);

return 0;
}
